# sia

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  noxfile.py  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  periodic-ci.yaml
changelog.d/: 20250130_131348_steliosvoutsinas_DM_48661.md  20250320_182325_steliosvoutsinas_DM_49297.md  20250605_072944_svoutsinas_DM_51268.md  20250617_131539_steliosvoutsinas_DM_51436.md  20250626_182539_steliosvoutsinas_DM_51575.md  20250626_214732_steliosvoutsinas_DM_51575.md  20250717_131517_steliosvoutsinas_DM_51564.md  20250826_170207_steliosvoutsinas_DM_51656.md  20250919_160914_steliosvoutsinas_DM_51656.md  20250922_200937_steliosvoutsinas_data_origin.md  20251204_135731_danfuchs_HEAD.md  20260209_181101_steliosvoutsinas_update_dependencies.md  20260717_145305_rra_DM_55537.md  20260722_151018_rra_DM_55537_queue.md  20260722_151409_rra_DM_55537_queue.md  20260722_152259_rra_DM_55537.md  20260722_172041_rra_DM_55537_queue.md
docs/: index.rst
docs/admin/: index.rst
docs/usage/: index.rst
requirements/: dev.in  dev.txt  main.in  main.txt  tox.txt
scripts/: install-base-packages.sh  install-dependency-packages.sh
src/sia/: config.py  constants.py  errors.py  events.py  exceptions.py  factory.py  main.py  sentry.py
src/sia/dependencies/: butler.py  context.py  data_collections.py  labeled_butler_factory.py  obscore_configs.py  query_params.py  token.py
src/sia/handlers/: external.py  internal.py
src/sia/models/: butler_type.py  common.py  data_collections.py  description.py  sia_query_params.py
src/sia/services/: availability.py  data_collections.py  description.py  query.py  response_handler.py  votable.py
src/sia/templates/: self_description.xml
tests/: conftest.py
tests/data/discovery/: standard.json
tests/data/logs/: bad-discovery.json
tests/data/responses/: availability-404.xml  availability-success.xml  capabilities.xml  self-description.xml
tests/data/templates/: availability.xml
tests/dependencies/: obscore_configs_test.py
tests/handlers/: internal_test.py
tests/models/: config_test.py  sia_params_test.py
tests/services/: data_collection_test.py
tests/support/: butler.py  data.py
tests/templates/: self_description.xml
